# nnstreamer-build-macos

./: meson_options.txt
.github/workflows/: master_test.yml
gstreamer/libs/gst/controller/: gstdirectcontrolbinding.c
subprojects/: gi-docgen.wrap  sysprof.wrap
subprojects/dv/: .gitlab-ci.yml  ChangeLog  Makefile.in  aclocal.m4  bootstrap  config.h.in  configure  configure.ac  libdv.pc  libdv.spec  libtool  meson.build  meson_options.txt
subprojects/dv/encodedv/: Makefile.in  dvconnect.c  encodedv.c  fix_headers.c  insert_audio.c  meson.build  ppmqscale.c  scan_packet_headers.c  steal_header.c
subprojects/dv/libdv/: Makefile.in  YUY2.c  asmoff.h  bitstream.h  dct_block_mmx.S  dct_block_mmx_x86_64.S  dovlc.c  dv.c  dv_win32_pthread.h  enc_output.c  encode.c  encode_x86.S  encode_x86_64.S  enctest.c  gasmoff.c  headers.c  idct_block_mmx.S  idct_block_mmx_x86_64.S  libdv.def  meson.build  quant_x86.S  quant_x86_64.S  recode.c  reppm.c  rgbtoyuv.S  rgbtoyuv_x86_64.S  testbitstream.c  testvlc.c  testvlc_x86.S  testvlc_x86_64.S  transpose_x86.S  transpose_x86_64.S  vlc_x86.S  vlc_x86_64.S
subprojects/dv/playdv/: Makefile.in  meson.build  playdv.c
subprojects/gl-headers/: meson.build  meson_options.txt
subprojects/gl-headers/khrplatform/: meson.build
subprojects/gst-plugins-bad/: meson.build
subprojects/x264/: .gitignore  .gitlab-ci.yml  README.meson  meson.build  meson_options.txt  version.py
subprojects/x264/cross/: cross-x86-linux-gcc.txt
